--- a/BulkyBook/Areas/Admin/Views/Category/Upsert.cshtml
+++ b/BulkyBook/Areas/Admin/Views/Category/Upsert.cshtml
@@ -1,8 +1,8 @@
 ﻿@model BulkyBook.Models.Category
 
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml"
-        var title = "Create Category";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    var title = "Create Category";
 }
 
 <form method="post">
@@ -13,7 +13,7 @@
             title = "Edit Category";
         }
         <div class="col-12 border-bottom">
-            <h2 class="text-primary">TITLE</h2>
+            <h2 class="text-primary">@title</h2>
         </div>
         <div class="col-8 pt-4">
             <div class="form-group row">
@@ -41,3 +41,7 @@
     </div>
 </form>
 
+@section Scripts
+{
+<partial name="_ValidationScriptsPartial" />
+}
